# ld34_growing_spaceships

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLM.cmake  FindSDL2.cmake
data/: data_directory.txt  parts.txt  ships.txt  sprites.txt
data/images/: images.txt  sprites1.xcf
data/ships/: core.txt  custom.txt  medium.txt  medium2.txt  medium3.txt  medium4.txt  pointy.txt  ship_one.txt  square1.txt  square2.txt  square3.txt
data/sounds/: attach.lch  explosion1.lch  explosion2.lch  laser.lch  menubeep.lch  missile.lch  redalert.lch  scanner.lch  select.lch  tractorbeam.lch
src/: CMakeLists.txt  assets.cpp  assets.h  camera.cpp  camera.h  font.cpp  font.h  game.cpp  game.h  globals.h  hud.cpp  hud.h  main.cpp  part.cpp  part.h  projectile.cpp  projectile.h  render.cpp  render.h  ship.cpp  ship.h  sound.cpp  sound.h  sprite.cpp  sprite.h  surface.cpp  surface.h  text.cpp  text.h  tractorbeam.cpp  tractorbeam.h  transform.cpp  transform.h
